--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
       
         <div class="row" >
                 <div id="crystals" class="col-sm-1">
-                <img class="gems" src="/assets/images/diamond.jpeg" alt="diamond">
+                <img class="diamond" src="/assets/images/diamond.jpeg" alt="diamond">
                 </div>
                 <div id="crystals" class="col-sm-1">
-                <img class="gems" src="/assets/images/emerald.jpeg" alt="emerald">
+                <img class="emerald" src="/assets/images/emerald.jpeg" alt="emerald">
                 </div>
                 <div id="crystals" class="col-sm-1">
-                <img class="gems" src="/assets/images/Ruby.jpeg" alt="ruby">
+                <img class="ruby" src="/assets/images/Ruby.jpeg" alt="ruby">
                 </div>
                 <div id="crystals" class="col-sm-1">
-                <img class="gems" src="/assets/images/saphire.jpeg" alt="saphire">
+                <img class="saphire" src="/assets/images/saphire.jpeg" alt="saphire">
                 </div>
         </div>
 
