--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         <div class="row" >
                 <div id = "newGame" class="col-sm-3">
                 </div>
-                <div id = "winnLoss" class="col-sm-2">
-                    <P>Wins </P>
-                    <p>losses</p>
+                <div id="winnLossArea" class="col-sm-2">
+                    <p id="AlertwinnLoss"></p> 
+                    <p >Wins: <span id="wins"></span></p>
+                    <p >losses: <span id="losses"></span></p>
                 </div>
         </div>
       
@@ -69,8 +70,8 @@
         </div>
 
         <div  class="row" >
-                <div id="GuessedNumber" class="col-sm-3">
-                <p>number</p>
+                <div id="addTotal" class="col-sm-3">0
+                
                 </div>
         </div>
 
