--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </head>
-<body>
+<body class="bg-warning"></body>>
        
 <div class="container">
         <div class="row" >
@@ -59,7 +59,7 @@
                 <img class="ruby" src="assets/images/Ruby.jpeg" alt="ruby">
                 </div>
                 <div id="crystals" class="col-sm-1">
-                <img class="saphire" src="assets/images/saphire.jpeg" alt="saphire">
+                <img class="saphire" src="assets/images/Saphire.jpeg" alt="saphire">
                 </div>
         </div>
 
